--- a/theme.html
+++ b/theme.html
@@ -89,9 +89,9 @@
 						<div class="menu">
 							<ul>
 								<li><a href="http://www.heogook.com">Home</a></li>
-								<li><a href="http://www.heogook.com/about">About</a></li>
-								<li><a href="">Application</a></li>
-								<li><a href="">Store</a></li>
+								<!-- <li><a href="http://www.heogook.com/about">About</a></li> -->
+								<!-- <li><a href="">Application</a></li> -->
+								<!-- <li><a href="">Store</a></li> -->
 							    </ul> 
 						</div><!-- menu End -->
 					 {% endif %}
