block apple banner
block apple banner

--- a/theme.html
+++ b/theme.html
@@ -231,7 +231,7 @@
 			}(document, 'script', 'facebook-jssdk'));</script>
 			  
 <!-- Apple Banner -->
-	<div><img src="http://www.evernotelife.com/heogook/apple_banner.jpg" width="100%"></div>
+	<!-- <div><img src="http://www.evernotelife.com/heogook/apple_banner.jpg" width="100%"></div> -->
 
 	</div>
 	</div>
