change Facebook width
change Facebook width

--- a/theme.html
+++ b/theme.html
@@ -220,7 +220,7 @@
 	<div class="facebook-title"><a href="https://www.facebook.com/heogook" target="_blank">Facebook</a></div>
 
 <!-- Facebook Like Box -->
-	<div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-width="100%" data-height="300" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
+	<div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-width="270" data-height="300" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
 	<div id="fb-root"></div>
 		<script>(function(d, s, id) {
 			var js, fjs = d.getElementsByTagName(s)[0];
