change instagram title
change instagram title

--- a/theme.html
+++ b/theme.html
@@ -223,7 +223,7 @@
 	<iframe src="http://snapwidget.com/in/?u=aGVvZ29va3xpbnw4NXwzfDN8fG5vfDV8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=071114" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:270px; height:270px"></iframe>
 			  
 <!-- Facebook Title -->
-	<div class="facebook-title"><a href="https://www.facebook.com/heogook" target="_blank">Facebook</a></div>
+	<div class="instagram-title"><a href="https://www.facebook.com/heogook" target="_blank">Facebook</a></div>
 
 <!-- Facebook Like Box -->
 	<div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-width="270" data-height="300" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
