--- a/theme.html
+++ b/theme.html
@@ -220,7 +220,7 @@
 	<div class="facebook-title"><a href="http://instagram.com/heogook" target="_blank">Instagram</a></div>
 
 <!-- Instagram Widget-->
-	<iframe src="http://snapwidget.com/in/?u=aGVvZ29va3xpbnw4NXwzfDN8fG5vfDV8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=071114" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:270px; height:270px"></iframe>
+	<iframe src="http://widget.websta.me/in/heogook/?s=133&w=2&h=2&b=0&p=2" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:270px; height: 270px" ></iframe> <!-- websta - web.stagram.com -->
 			  
 <!-- Facebook Title -->
 	<div class="instagram-title"><a href="https://www.facebook.com/heogook" target="_blank">Facebook</a></div>
