--- a/theme.html
+++ b/theme.html
@@ -2,6 +2,7 @@
 	<html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
 		<head>
 			<meta charset="utf-8">
+			<meta name="google-translate-customization" content="bfd87365ca844a17-dfbc458b5118d04c-gfbc7354d23e38595-f"></meta>
 			<title>HEOGOOK</title>
 	
 			{{ header_meta }}
@@ -235,6 +236,14 @@
 			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
 			fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Website Translator -->	
+<div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'ko', includedLanguages: 'de,el,en,eo,fr,ja,ko,ru,zh-CN', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 		  
 <!-- Apple Banner -->
 	<!-- <div><img src="http://www.evernotelife.com/heogook/apple_banner.jpg" width="100%"></div> -->
