Google Adsense Script
Google Adsense Script

--- a/theme.html
+++ b/theme.html
@@ -68,6 +68,17 @@
 </script>
 {% endif %}
 
+<!-- Google Adsense Script -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- In Note -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:600px;height:90px"
+     data-ad-client="ca-pub-7614451157401562"
+     data-ad-slot="9325567331"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <!-- Adobe Typekit -->   
 <script src="//use.typekit.net/tze3ccr.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
