making some changes
making some changes

--- a/theme.html
+++ b/theme.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8">
 			<meta name="google-translate-customization" content="bfd87365ca844a17-dfbc458b5118d04c-gfbc7354d23e38595-f"></meta>
-			<title>HEOGOOK.COM</title>
+			<title>HEOGOOK</title>
 	
 			{{ header_meta }}
 	
