making some changes
making some changes

--- a/theme.html
+++ b/theme.html
@@ -21,14 +21,15 @@
 			<script type="text/javascript" src="http://www.evernotelife.com/heogook/coin-slider.js"></script>
 
 <!-- Google Adsense Script -->
-script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script type="text/javascript">
+    google_ad_client = "ca-pub-7614451157401562";
+    google_ad_slot = "9325567331";
+    google_ad_width = 600;
+    google_ad_height = 90;
+</script>
 <!-- In Note -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:600px;height:90px"
-     data-ad-client="ca-pub-7614451157401562"
-     data-ad-slot="9325567331"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 
 <!-- Google Custom Search Script-->
