making some changes
making some changes

--- a/theme.html
+++ b/theme.html
@@ -248,6 +248,18 @@
 			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
 			fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Google Adsense Script -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- In Sidebar -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7614451157401562"
+     data-ad-slot="6407296933"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		  
 <!-- Apple Banner -->
 	<!-- <div><img src="http://www.evernotelife.com/heogook/apple_banner.jpg" width="100%"></div> -->
