making some changes
making some changes

--- a/theme.html
+++ b/theme.html
@@ -249,6 +249,9 @@
 			fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));</script>
 
+<!-- Google AD Title -->
+	<div class="ad-title">Ad</div>
+
 <!-- Google Adsense Script -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- In Sidebar -->
