making some changes
making some changes

--- a/theme.html
+++ b/theme.html
@@ -229,16 +229,19 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 
-<!-- Instagram Title-->
+<!-- Instagram Title
 	<div class="facebook-title"><a href="http://instagram.com/heogook" target="_blank">Instagram</a></div>
+-->
 
-<!-- Instagram Widget-->
+<!-- Instagram Widget
 	<iframe src="http://widget.websta.me/in/heogook/?s=133&w=2&h=2&b=0&p=2" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:270px; height: 270px" ></iframe> <!-- websta - web.stagram.com -->
-			  
-<!-- Facebook Title -->
-	<div class="instagram-title"><a href="https://www.facebook.com/heogook" target="_blank">Facebook</a></div>
+-->			  
 
-<!-- Facebook Like Box -->
+<!-- Facebook Title 
+	<div class="instagram-title"><a href="https://www.facebook.com/heogook" target="_blank">Facebook</a></div>
+-->
+
+<!-- Facebook Like Box 
 	<div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-width="270" data-height="300" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
 	<div id="fb-root"></div>
 		<script>(function(d, s, id) {
@@ -248,6 +251,7 @@
 			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
 			fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));</script>
+-->
 
 <!-- Google AD Title -->
 	<div class="ad-title">Ad</div>
