making some changes
making some changes

--- a/theme.html
+++ b/theme.html
@@ -163,6 +163,7 @@
 			  </div>
 
 <!-- Google Adsense Script -->
+<div class="adbox">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- In Note -->
 <ins class="adsbygoogle"
@@ -172,6 +173,7 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<div>
 	  
 <!-- DISQUS COMMENT START -->
 {% if site.disqus %}
