--- a/theme.html
+++ b/theme.html
@@ -20,6 +20,12 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 			<script type="text/javascript" src="http://www.evernotelife.com/heogook/coin-slider.js"></script>
 
+<!-- Google AdSense Style-->
+<style>
+.on-note { width: 320px; height: 50px; }
+@media(min-width: 500px) { .on-note { width: 600px; height: 60px; } }
+@media(min-width: 800px) { .on-note { width: 728px; height: 90px; } }
+</style>
 
 <!-- Google Custom Search Script-->
 <script>
@@ -181,11 +187,10 @@
 <!-- Google Adsense Script -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- On Note -->
-<ins class="adsbygoogle"
-     style="display:block"
+<ins class="adsbygoogle on-note"
+     style="display:inline-block"
      data-ad-client="ca-pub-7614451157401562"
-     data-ad-slot="8067330133"
-     data-ad-format="auto"></ins>
+     data-ad-slot="8067330133"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
