making some changes
making some changes

--- a/theme.html
+++ b/theme.html
@@ -55,6 +55,10 @@
 	ga('send', 'pageview');
 </script>
 	
+<!-- Google Follow Button Script -->
+<!-- Place this tag in your head or just before your close body tag. -->
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
 {% if site.analytics %}
 <script>
 	var _gaq = _gaq || [];
@@ -212,7 +216,11 @@
 	
 {% if not is_login %}
 <span class="span3 offset1">
-		
+
+<!-- Google Follow Button -->
+<!-- Place this tag where you want the widget to render. -->
+<div class="g-follow" data-annotation="bubble" data-height="24" data-href="//plus.google.com/u/0/107481486557583613870" data-rel="publisher"></div>
+
 <!-- Twitter Title -->
 	<div class="twitter-title"><a href="http://www.twitter.com/gookheo" target="_blank">Twitter</a></div>
 
