--- a/theme.html
+++ b/theme.html
@@ -90,6 +90,7 @@
 						<div class="menu">
 							<ul>
 								<li><a href="http://www.heogook.com">Home</a></li>
+								<li><a href="http://www.instagram.com/heogook" target="_blank">Instagram</a></li>
 								<!-- <li><a href="http://www.heogook.com/about">About</a></li> -->
 								<!-- <li><a href="">Application</a></li> -->
 								<!-- <li><a href="">Store</a></li> -->
