--- a/theme.html
+++ b/theme.html
@@ -91,8 +91,8 @@
 							<ul>
 								<li><a href="http://www.heogook.com">Home</a></li>
 								<li><a href="http://www.instagram.com/heogook" target="_blank">Instagram</a></li>
+								<li><a href="/tag/Application">Application</a></li>
 								<!-- <li><a href="http://www.heogook.com/about">About</a></li> -->
-								<!-- <li><a href="">Application</a></li> -->
 								<!-- <li><a href="">Store</a></li> -->
 							    </ul> 
 						</div><!-- menu End -->
