--- a/theme.html
+++ b/theme.html
@@ -91,7 +91,7 @@
 							<ul>
 								<li><a href="http://www.heogook.com">Home</a></li>
 								<li><a href="http://www.instagram.com/heogook" target="_blank">Instagram</a></li>
-								<li><a href="/tag/Application">Application</a></li>
+								<li><a href="/tag/application">Application</a></li>
 								<!-- <li><a href="http://www.heogook.com/about">About</a></li> -->
 								<!-- <li><a href="">Store</a></li> -->
 							    </ul> 
