--- a/theme.html
+++ b/theme.html
@@ -226,7 +226,18 @@
 		<a class="twitter-timeline" href="https://twitter.com/gookheo" data-widget-id="469208187178987520" data-screen-name="gookheo" data-show-replies="false" data-tweet-limit="3" data-chrome="noheader noborders noheader transparent" data-related="benward,endform" border-color="#FFFFFF" width="100%"></a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
-		  
+
+<!-- Facebook Likebox Start -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+  
 <!-- Google AD Title -->
 	<div class="ad-title">Ad</div>
 
