--- a/theme.html
+++ b/theme.html
@@ -227,6 +227,9 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 
+<!-- Facebook Title -->
+	<div class="facebook-title"><a href="http://www.facebook.com/heogook" target="_blank">Facebook</a></div>
+
 <!-- Facebook Likebox Start -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
