--- a/theme.html
+++ b/theme.html
@@ -239,7 +239,7 @@
   js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+<div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
   
 <!-- Google AD Title -->
 	<div class="ad-title">Ad</div>
