--- a/theme.html
+++ b/theme.html
@@ -93,17 +93,6 @@
 		</div><!-- container End -->
 	</div><!-- navbar-inner End -->
 </div><!-- navbar navbar-fixed-top End -->
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Bottom Images -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7614451157401562"
-     data-ad-slot="1124095332"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 	    
 <div class="container">
 	<div class="row">
@@ -216,9 +205,20 @@
 {% if not is_login %}
 <span class="span3 offset1">
 
-<!-- Google Follow Button -->
-<!-- Place this tag where you want the widget to render. -->
-<div class="g-follow" data-annotation="bubble" data-height="24" data-href="//plus.google.com/u/0/107481486557583613870" data-rel="publisher"></div>
+<!-- Google AD Title -->
+	<div class="ad-title">Ad</div>
+
+<!-- Google Adesnse Script -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Bottom Images -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7614451157401562"
+     data-ad-slot="1124095332"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <!-- Twitter Title -->
 	<div class="twitter-title"><a href="http://www.twitter.com/gookheo" target="_blank">Twitter</a></div>
