--- a/theme.html
+++ b/theme.html
@@ -205,6 +205,12 @@
 {% if not is_login %}
 <span class="span3 offset1">
 
+<!-- Instagram Title -->
+	<div class="instagram-title"><a href="http://www.instagram.com/heogook" target="_blank">Instagram</a></div>
+
+<!-- Webstagram Script -->
+<iframe src="http://widget.websta.me/in/heogook/?s=134&w=2&h=3&b=0&p=2" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:272px; height: 408px" ></iframe> <!-- websta - web.stagram.com -->
+
 <!-- Google Adesnse Script -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Bottom Images -->
