--- a/theme.html
+++ b/theme.html
@@ -211,6 +211,9 @@
 <!-- Webstagram Script -->
 <iframe src="http://widget.websta.me/in/heogook/?s=149&w=2&h=3&b=0&p=2" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:302px; height: 453px" ></iframe> <!-- websta - web.stagram.com -->
 
+<!-- Google AD Title -->
+	<div class="ad-title">Ad</div>
+
 <!-- Google Adesnse Script -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Bottom Images -->
@@ -245,6 +248,9 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <div class="fb-like-box" data-href="https://www.facebook.com/heogook" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
+
+<!-- Google AD Title -->
+	<div class="ad-title">Ad</div>
 
 <!-- Google Adsense Script -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
