--- a/theme.html
+++ b/theme.html
@@ -82,6 +82,7 @@
 							<ul>
 								<li><a href="http://www.heogook.com">Home</a></li>
 								<li><a href="/tag/application">Application</a></li>
+								<li><a href="/tag/evernote">Evernote</a></li>
 								<!-- <li><a href="http://www.heogook.com/about">About</a></li> -->
 								<!-- <li><a href="">Store</a></li> -->
 							    </ul> 
