--- a/theme.html
+++ b/theme.html
@@ -62,6 +62,22 @@
 </script>
 {% endif %}
 
+<!-- Facebook Conversion Code for Google Ad in Sidebar -->
+<script>(function() {
+  var _fbq = window._fbq || (window._fbq = []);
+  if (!_fbq.loaded) {
+    var fbds = document.createElement('script');
+    fbds.async = true;
+    fbds.src = '//connect.facebook.net/en_US/fbds.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(fbds, s);
+    _fbq.loaded = true;
+  }
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6023870648602', {'value':'0.00','currency':'KRW'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6023870648602&amp;cd[value]=0.00&amp;cd[currency]=KRW&amp;noscript=1" /></noscript>
 
 		</head>
 
